# SeleniumCource

./: README.md  conftest.py  pyproject.toml  requirements.txt  test_main_page.py  test_product_page.py
pages/: base_page.py  basket_page.py  locators.py  login_page.py  main_page.py  product_page.py
